# api/openapi/openapi.yaml
@@ -1681,6 +1681,11 @@ paths:
           schema:
             type: boolean
           required: false
+        - in: query
+          name: includeDetails
+          schema:
+            type: boolean
+          required: false
       responses:
         '200':
           description: Printers list
@@ -2611,8 +2616,6 @@ components:
       properties:
         tag:
           type: string
-      required:
-        - tag
     UpdatePullResponse:
       type: object
       properties:
